# AMP-Example2

./: CMakeLists.txt  test_hello.cpp
cmake/: cppcheckSuppressionFile  ctest_script.cmake
